@@ -284,11 +284,17 @@ invoking the compiler.</p>
   </tr>
   <tr>
     <td valign="top">source</td>
+
     <td valign="top">Value of the <code>-source</code> command-line
     switch; will be ignored by all implementations except
-    <code>modern</code>. Legal values are <code>1.3</code> and
-    <code>1.4</code> &ndash; by default, no <code>-source</code> argument
-    will be used at all.</td>
+    <code>modern</code> and <code>jikes</code>.<br>
+    If you use this attribute together with <code>jikes</code>, you
+    must make sure that your version of jikes supports the
+    <code>-source</code> switch.<br>
+    Legal values are <code>1.3</code> and <code>1.4</code> &ndash; by
+    default, no <code>-source</code> argument will be used at
+    all.</td>
+
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
